# assembler

./: COPYRIGHT  LICENSE  README.md
workspace/assembler/: Cargo.toml
workspace/assembler/benches/: performance_tests.rs
workspace/assembler/src/: AssemblingForArchitectureVariant.rs  ByteEmitter.rs  CpuFeatures.rs  Displacement.rs  ExecutableAnonymousMemoryMap.rs  ExecutableAnonymousMemoryMapCreationError.rs  InstructionEncodingError.rs  InstructionParsingError.rs  InstructionPointer.rs  InstructionPointerValidity.rs  InstructionStream.instructions.rs  InstructionStream.rs  InstructionStreamHints.rs  LabelledLocations.rs  NearJmpResult.rs  OrdinaryInstructionStream.rs  ParsedInstruction.rs  Parser.rs  ShortJmpResult.rs  Size.rs  StatementsBuffer.rs  SupportedOperationalMode.rs  TODO.txt  lib.rs
workspace/assembler/src/mk2/: ByteEmitter.rs  Constants.txt  Displacement.rs  InstructionStream.rs  Names.txt  OrdinaryInstructionStream.rs  SoFar.txt  Types.txt  mod.rs
workspace/assembler/src/mk2/mnemonic_parameter_types/: AsDisplacement.rs  BranchHint.rs  Hint.rs  MemoryOperandOrBranchHint.rs  MemoryOrBranchHint.rs  MemoryOrRegister.rs  ModRM.rs  ToOpcode.rs  mod.rs
workspace/assembler/src/mnemomics/: InstructionFlags.rs  Mnemonic.rs  MnemonicDefinition.rs  MnemonicDefinitionSignature.rs  MnemonicDefinitions.rs  MnemonicParameter.rs  MnemonicParameterKind.rs  MnemonicParameterSize.rs  mod.rs
workspace/assembler/src/mnemonic_parameter_types/: AsDisplacement.rs  BranchHint.rs  FunctionPointer.rs  Label.rs  MemoryOrBranchHint.rs  MemoryOrRegister.rs  OpcodeEncoding.rs  PrefixGroup2.rs  ToOpcode.rs  mod.rs
workspace/assembler/src/mnemonic_parameter_types/immediates/: Immediate.rs  Immediate16Bit.rs  Immediate32Bit.rs  Immediate64Bit.rs  Immediate8Bit.rs  impl_immediate.rs  mod.rs
workspace/assembler/src/mnemonic_parameter_types/memory/: Any128BitMemory.rs  Any16BitMemory.rs  Any256BitMemory.rs  Any32BitMemory.rs  Any64BitMemory.rs  Any8BitMemory.rs  BitMemory.rs  (+19 more)
workspace/assembler/src/parsed_instruction/: InstructionStream.rs  JumpTargetReference.rs  JumpVariant.rs  ParsedIndirectMemoryReferenceIndex.rs  ParsedMnemonicArgument.rs  Register.rs  RegisterFamily.rs  RegisterIdentifier.rs  SizedMnemonicArgument.rs  mod.rs
workspace/assembler/src/parsing/: CpuFeature2.rs  InstructionFlag2.rs  Line.rs  Mnemonic.rs  OpcodeBytes.rs  RepeatPrefix.rs  SegmentPrefix.rs  mod.rs
workspace/assembler/src/relocations/: Relocation.rs  RelocationKind.rs  Relocations.rs  mod.rs
workspace/assembler/src/size/: AddressSize.rs  Size.rs  mod.rs
workspace/assembler/src/tests/: mod.rs
(+164 files in other folders)
