# This file is part of assembler. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/assembler/master/COPYRIGHT. No part of assembler, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of assembler. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/assembler/master/COPYRIGHT.


[package]
name = "assembler"
description = "assembler"
keywords = ["assembler"]
license = "MPL-2.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>", "Alexander Stocko <as@coder.gg>", "CensoredUsername <cens.username@gmail.com>"]
homepage = "https://github.com/lemonrock/assembler"
repository = "https://github.com/lemonrock/assembler.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = false
version = "0.0.0"

[dependencies]
arrayvec = "^0.4"
bitflags = "^1.0"
either = "^1.5"
phf = "^0.7"
phf_macros = "^0.7"
